# contract

./: .gitignore  CREDITS.txt  Cargo.toml  Makefile  README.md  compileAndSync  rustfmt.toml
.github/workflows/: tests.yaml
examples/: schema.rs
src/: constants.rs  contract.rs  game_state.rs  lib.rs  query.rs  utils.rs  words.txt
src/utils/: cards.rs  general.rs
tests/: betting.rs  permissions.rs  utils.rs  words.rs
