[package]
name = "secret-dreamscape"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { git = "https://github.com/enigmampc/SecretNetwork", tag = "v1.0.4-debug-print" }
cosmwasm-storage = { git = "https://github.com/enigmampc/SecretNetwork", tag = "v1.0.4-debug-print" }
schemars = "0.7"
serde-json-wasm = "0.3.1"
serde = { version = "1.0.114", default-features = false, features = [
    "derive",
    "alloc"
] }
sha2 = "0.9.1"
rand_chacha = "0.2.2"
rand = "0.7.3"
lazy_static = "1.4.0"