[package]
name = "secret-dreamscape"
version = "0.1.0"
edition = "2018"
exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
#default = []

[dependencies]
cosmwasm-std = { version = "0.10", package = "secret-cosmwasm-std" }
cosmwasm-storage = { version = "0.10", package = "secret-cosmwasm-storage" }
secret-toolkit = "0.2.0"
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
serde-json-wasm = "0.3.1"
snafu = { version = "0.6.3" }
bincode2 = "2.0.1"
subtle = { version = "2.2.3", default-features = false }
base64 = "0.12.3"
rand_chacha = { version = "0.2.2", default-features = false }
rand = "0.7.3"
sha2 = { version = "0.9.1", default-features = false }
lazy_static = "1.4.0"

[dev-dependencies]
cosmwasm-schema = { version = "0.9.2" }
